# gilt

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml
benches/: benchmarks.rs
crates/gilt-derive/: Cargo.toml
crates/gilt-derive/src/: lib.rs
examples/: accordion.rs  align_demo.rs  ansi_demo.rs  async_demo.rs  attrs.rs  badge.rs  bars.rs  breadcrumbs.rs  cache_demo.rs  canvas.rs  color_demo.rs  color_env.rs  columns.rs  columns_demo.rs  constrain_demo.rs  cookbook_dashboard.rs  cookbook_deploy.rs  cookbook_gitlog.rs  cookbook_log_viewer.rs  cp_progress.rs  csv_table.rs  demo.rs  derive_columns.rs  derive_inspect.rs  derive_panel.rs  derive_renderable.rs  derive_rule.rs  derive_table.rs  derive_tree.rs  diagnose.rs  diff.rs  display_trait.rs  downloader.rs  dynamic_progress.rs  emoji.rs  export.rs  eyre_demo.rs  figlet.rs  file_progress.rs  filesize_demo.rs  (+67 more)
gilt-derive/: Cargo.toml
gilt-derive/src/: lib.rs
src/: accessibility.rs  accordion.rs  align_widget.rs  ansi.rs  anstyle_adapter.rs  async.rs  badge.rs  bar.rs  box_chars.rs  breadcrumbs.rs  canvas.rs  cells.rs  color.rs  color_env.rs  color_triplet.rs  columns.rs  console.rs  constrain.rs  containers.rs  control.rs  csv_table.rs  default_styles.rs  diff.rs  emoji.rs  emoji_codes.rs  emoji_replace.rs  errors.rs  export_format.rs  eyre_handler.rs  figlet.rs  file_proxy.rs  filesize.rs  gradient.rs  group.rs  highlighter.rs  http.rs  inspect.rs  json.rs  layout.rs  lib.rs  (+38 more)
src/color/: accessibility.rs  mod.rs  palette.rs  terminal_theme.rs  theme.rs
src/error/: logging_handler.rs  mod.rs  traceback.rs
src/live/: live_render.rs  mod.rs  screen.rs
src/progress/: core.rs  mod.rs  task.rs
src/progress/columns/: bar.rs  filesize.rs  mod.rs  progress.rs  spinner.rs  text.rs  time.rs
src/status/: mod.rs  spinner.rs  spinners.rs  toast.rs
src/text/: core.rs  enums.rs  helpers.rs  lines.rs  mod.rs  span.rs
src/utils/: align_widget.rs  bar.rs  box_chars.rs  cells.rs  constrain.rs  containers.rs  diagnose.rs  emoji.rs  filesize.rs  group.rs  inspect.rs  mod.rs  padding.rs  pretty.rs  protocol.rs  region.rs  scope.rs  styled.rs  styled_str.rs
src/widgets/: mod.rs
src/widgets/table/: column.rs  core.rs  mod.rs  render.rs  row.rs
tests/: derive_table.rs  integration.rs  proptests.rs
tests/unit/: console_tests.rs  prompt_tests.rs  style_tests.rs  text_tests.rs
